--- a/templates/profile.html
+++ b/templates/profile.html
@@ -166,11 +166,11 @@
         </div>
         <div class="nav-floated-div">
             <div class="nav-links">
-                <button class="nav-link2 nav-link-user-feed inverted">Create
+                <a href="/create"><button class="nav-link2 nav-link-user-feed inverted hoverable">Create
                   <svg width="17" height="17" class="nav-create-vector" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M22.0647 8.752V13.648H13.9527V21.76H9.05669V13.648H0.944688V8.752H9.05669V0.639997H13.9527V8.752H22.0647Z" fill="black"/>
                     </svg>                    
-                </button>
+                </button></a>
             </div>
             <div class="nav-actions">
                 <div class="nav-notifications inverted">
