--- a/static/style.css
+++ b/static/style.css
@@ -2433,4 +2433,32 @@ progress::-webkit-progress-value {
 
 .fright{
     float: right;
+    margin-right: 1em;
+}
+
+.wooo{
+    width: 70%;
+}
+
+.we9ii{
+    margin-top: 2em;
+    z-index: -1;
+    transition: opacity 1s;
+}
+
+.we9ii:hover{
+    opacity: 80%;
+}
+
+.weoirj{
+    bottom: 5%;
+    width: 4em;
+    box-shadow: 0px 231px 93px rgba(255, 255, 255, 0.01), 0px 130px 78px rgba(255, 255, 255, 0.05), 0px 58px 58px rgba(255, 255, 255, 0.09), 0px 14px 32px rgba(255, 255, 255, 0.1), 0px 0px 0px #ffffff1a;
+    height: 4em;
+    background-color: rgb(45, 45, 45);
+    border-radius: 50%;
+    right: 5%;
+    border: none;
+    color: white;
+    position: fixed;
 }
